--- a/ContentRate.BlazorComponents/_Imports.razor
+++ b/ContentRate.BlazorComponents/_Imports.razor
@@ -3,3 +3,5 @@
 @using ContentRate.ViewModels;
 @using ReactiveUI.Blazor;
 @using Microsoft.AspNetCore.Components.Routing;
+@using ContentRate.BlazorComponents.Content;
+@using Microsoft.AspNetCore.Components.Web.Virtualization;
